--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 server.port=8888
-fpl-spring-server-config.minimum = 5
-fpl-spring-server-config.maximum = 995
+spring.application.name=fpl-spring-server-config
+management.endpoints.web.exposure.include = *
+spring.cloud.config.server.git.uri=https://github.com/arvo03/config
+spring.cloud.config.server.git.default-label=config-main-branch
+#spring.cloud.config.server.git.uri.username=ghosh.arunabha251@gmail.com
+#spring.cloud.config.server.git.uri.password=ArunAv234
+#spring.cloud.config.server.git.uri = file:///D:/Study/GIT/Git-CodeBase/git-config
